l2hadd changGvi, create report